# lunetix-engine

./: .gclient  .gclient_entries  .gcs_entries  .gitignore  DEPS  README.md  build_lunetix.bat  build_lunetix_react.bat  setup_lunetix.bat  start_lunetix_react.bat
.cipd/: tagcache.db
.cipd/pkgs/1/: _current.txt
.cipd/pkgs/1/qaFFBVfGfUuwtOTCtu3Q0EfhRfL5Esr9uopO-jVDGEkC/.cipdpkg/: manifest.json
.cipd/pkgs/12/: _current.txt
.cipd/pkgs/12/U53JtLZhRQw50b_5I3sGmKigZh6xHSV7LFRGU8M3Pr4C/.cipdpkg/: manifest.json
.cipd/pkgs/19/: _current.txt
.cipd/pkgs/19/YMov1prKH3tQK5OZGFFuu2QxRumoY9lntFYUWqeHoX4C/.cipdpkg/: manifest.json
.cipd/pkgs/21/: _current.txt
.cipd/pkgs/21/ZoUFfQsUZWTzC0H6yCz50QfMHBXwNFYFJm1oAxOwtsMC/.cipdpkg/: manifest.json
.cipd/pkgs/22/: _current.txt
.cipd/pkgs/22/C0vIZIdjrfJkmHi-WZit0KWRRYPyhtpDjrX71TUwTMgC/.cipdpkg/: manifest.json
.cipd/pkgs/3/: _current.txt
.cipd/pkgs/3/oaROZssV6Mx4wtvtVu9FLRG4d3HuR-kE7fAAKgHOeJcC/.cipdpkg/: manifest.json
.cipd/pkgs/6/: _current.txt
.cipd/pkgs/6/6IjyTtEKqdvilAJvCzALSDUwYPge7DO1diZL11Fp48wC/.cipdpkg/: manifest.json
.cipd/pkgs/8/: _current.txt
.cipd/pkgs/8/BbxIk-33MsY-NtBpDO07D14upMBf0shlcli9ghzMi7cC/.cipdpkg/: manifest.json
lunetix/: BUILD.gn
lunetix/app/: BUILD.gn  lunetix.exe.manifest  lunetix_exe.rc  lunetix_exe_version.rc  lunetix_main.cc  lunetix_main_delegate.cc  lunetix_main_delegate.h
lunetix/branding/strings/: lunetix_strings.grd
lunetix/browser/: BUILD.gn  lunetix_browser_main_parts.cc  lunetix_browser_main_parts.h  lunetix_browser_process.cc  lunetix_browser_process.h  lunetix_browser_test.cc  lunetix_content_browser_client.cc  lunetix_content_browser_client.h
lunetix/browser/dark_mode/: lunetix_dark_mode_engine.cc  lunetix_dark_mode_engine.h
lunetix/browser/extensions/: lunetix_extension_system.cc  lunetix_extension_system.h
lunetix/browser/memory/: lunetix_memory_optimizer.cc  lunetix_memory_optimizer.h  lunetix_memory_settings.cc  lunetix_memory_settings.h
lunetix/browser/net/: lunetix_network_delegate.cc  lunetix_network_delegate.h
lunetix/browser/prefs/: lunetix_pref_service.h
lunetix/browser/profiles/: lunetix_profile_manager.cc  lunetix_profile_manager.h
lunetix/browser/reading_mode/: lunetix_reading_mode.cc  lunetix_reading_mode.h
lunetix/browser/ui/: lunetix_browser_window.cc  lunetix_browser_window.h
lunetix/browser/ui/views/: lunetix_browser_frame.cc  lunetix_browser_frame.h  lunetix_browser_view.cc  lunetix_browser_view.h
lunetix/browser/ui/views/memory/: memory_optimizer_bubble_view.cc  memory_optimizer_bubble_view.h
lunetix/browser/workspaces/: lunetix_workspace_manager.cc  lunetix_workspace_manager.h
lunetix/common/: BUILD.gn  lunetix_constants.cc  lunetix_constants.h  lunetix_paths.cc  lunetix_paths.h  lunetix_paths_unittest.cc  lunetix_switches.cc  lunetix_switches.h  lunetix_version_info.cc  lunetix_version_info.h  lunetix_version_info_unittest.cc
lunetix/patches/: 0001-lunetix-branding.patch  0002-lunetix-user-agent.patch  0003-lunetix-default-settings.patch  0004-lunetix-ui-customization.patch  0005-lunetix-startup-urls.patch  0006-lunetix-about-dialog.patch  0007-lunetix-memory-optimizer.patch  0008-lunetix-ux-features.patch
lunetix/renderer/: BUILD.gn  lunetix_content_renderer_client.cc  lunetix_content_renderer_client.h  lunetix_render_thread_observer.cc  lunetix_render_thread_observer.h
lunetix/tools/: apply_patches.py  build.py  ci_build.py  generate_patches.py  package.py  setup_branding.py  sync_chromium.py  test_runner.py  update_version.py
lunetix/ui-react/: README.md  desktop.html  ecosystem.html  index.html  mobile.html  package-lock.json  package.json  simple-desktop.html  tailwind.config.js  vite.config.js
lunetix/ui-react/src/: index.css  main.jsx
lunetix/ui-react/src/components/: DesktopInterface.jsx  DesktopToolbar.jsx  EcosystemDemo.jsx  MobileAddressBar.jsx  MobileInterface.jsx  TabSwitcher.jsx
lunetix/ui-react/src/utils/: browserBridge.js
lunetix/ui_mockups/: lunetix_ui_concept.html
lunetix/utility/: BUILD.gn  lunetix_content_utility_client.cc  lunetix_content_utility_client.h
